added files from my branch

--- a/ScholarCollabs.ipynb
+++ b/ScholarCollabs.ipynb
@@ -36,65 +36,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "0b8f7647-2f14-4e3e-99b0-df093190f2ee",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in system(\"timedatectl\", intern = TRUE):\n",
-      "“running command 'timedatectl' had status 1”\n",
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.1 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.7\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.3     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
-      "\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "Loading required package: viridisLite\n",
-      "\n",
-      "Skipping install of 'patchwork' from a github remote, the SHA1 (79223d30) has not changed since last install.\n",
-      "  Use `force = TRUE` to force installation\n",
-      "\n",
-      "Skipping install of 'circlize' from a github remote, the SHA1 (14116da5) has not changed since last install.\n",
-      "  Use `force = TRUE` to force installation\n",
-      "\n",
-      "Installing package into ‘/home/jupyter/R/x86_64-pc-linux-gnu-library/4.0’\n",
-      "(as ‘lib’ is unspecified)\n",
-      "\n",
-      "========================================\n",
-      "circlize version 0.4.14\n",
-      "CRAN page: https://cran.r-project.org/package=circlize\n",
-      "Github page: https://github.com/jokergoo/circlize\n",
-      "Documentation: https://jokergoo.github.io/circlize_book/book/\n",
-      "\n",
-      "If you use it in published research, please cite:\n",
-      "Gu, Z. circlize implements and enhances circular visualization\n",
-      "  in R. Bioinformatics 2014.\n",
-      "\n",
-      "This message can be suppressed by:\n",
-      "  suppressPackageStartupMessages(library(circlize))\n",
-      "========================================\n",
-      "\n",
-      "\n"
-     ]
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "library(viridis)\n",
-    "devtools::install_github(\"thomasp85/patchwork\")\n",
-    "devtools::install_github(\"jokergoo/circlize\")\n",
-    "install.packages(\"RColorBrewer\")\n",
+    "# devtools::install_github(\"thomasp85/patchwork\")\n",
+    "# devtools::install_github(\"jokergoo/circlize\")\n",
+    "# install.packages(\"RColorBrewer\")\n",
     "library(patchwork)\n",
     "library(circlize)\n",
-    "library(RColorBrewer)\n"
+    "library(RColorBrewer)"
    ]
   },
   {
@@ -107,13 +65,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "48dd282f-c187-4c92-855d-a42f2c607d86",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# !!! Modify this to match the name of the CSV file that was created as output form the ScholarScraper notebook\n",
-    "ss_output_file = \"ss_output_data.csv\""
+    "\n",
+    "# ss_output_file = \"simplified-dmcbh_members_output_data.csv\"\n",
+    "# title = \"DMCBH IRP Collaborations\"\n",
+    "# output_pdf_path = \"dmcbh_members_chord_diagram-unweighted.pdf\"\n",
+    "# output_pdf_path = \"dmcbh_members_chord_diagram-weighted.pdf\"\n",
+    "\n",
+    "# ss_output_file = \"simplified-irp_lmd_members_output_data.csv\"\n",
+    "# title = \"Learning Memory & Dementias IRP Collaborations\"\n",
+    "# output_pdf_path = \"irp_lmd_chord_diagram-unweighted.pdf\"\n",
+    "# output_pdf_path = \"irp_lmd_chord_diagram-weighted.pdf\"\n",
+    "\n",
+    "# ss_output_file = \"simplified-irp_bdnd_members_output_data.csv\"\n",
+    "# title = \"Brain Development\\n& Neurodevelopmental Disorders IRP Collaborations\"\n",
+    "# output_pdf_path = \"irp_bdnd_chord_diagram.pdf\"\n",
+    "\n",
+    "# ss_output_file = \"simplified-irp_mha_members_output_data.csv\"\n",
+    "# title = \"Mental Health & Addictions IRP Collaborations\"\n",
+    "# output_pdf_path = \"irp_mha_chord_diagram-weighted.pdf\"\n",
+    "# output_pdf_path = \"irp_mha_chord_diagram-unweighted.pdf\"\n",
+    "\n",
+    "# ss_output_file = \"simplified-irp_bir_members_output_data.csv\"\n",
+    "# title = \"Brain Injury & Repair IRP Collaborations\"\n",
+    "# output_pdf_path = \"irp_bir_chord_diagram-weighted.pdf\"\n",
+    "# output_pdf_path = \"irp_bir_chord_diagram-unweighted.pdf\"\n",
+    "\n",
+    "ss_output_file = \"simplified-new-irp_smsmd_members_output_data.csv\"\n",
+    "title = \"Sensory Motor Systems\\n& Movement Disorders IRP Collaborations\"\n",
+    "output_pdf_path = \"irp_smsmd_chord_diagram-unweighted.pdf\""
    ]
   },
   {
@@ -128,13 +117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "cbf220ec-01c2-4bac-aeec-64b01ef9ce4a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# !!! Modify the diagram title\n",
-    "title = \"Dynamic Brain Circuits Collaborations\"\n",
     "\n",
     "# !!! Modify the colour palette. \n",
     "c_pallete <- brewer.pal(12,\"Paired\")\n",
@@ -153,9 +145,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "4490937c-f743-4584-b016-785bac8c3777",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "df_collab = read.csv(ss_output_file)"
@@ -171,9 +167,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "1db6abb7-5a2e-4ff3-8683-d2a32a80d15b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# creating a subset of our survey data that extracts the useful columns. \n",
@@ -193,9 +193,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "9bf222d0-9e43-4a65-b8be-75c472437150",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "origin = c()\n",
@@ -244,9 +248,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "9f1bc4f3-c252-43b6-baa9-3c1a896266d6",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "color =  c()\n",
@@ -267,6 +275,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71388505",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "9fdd28b7-72f5-46c3-b728-4ebf4daa2b2c",
    "metadata": {},
@@ -276,23 +296,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "131f81a0-8fd0-46d9-a856-245d27ae912b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<strong>png:</strong> 2"
+       "<strong>pdf:</strong> 2"
       ],
       "text/latex": [
-       "\\textbf{png:} 2"
+       "\\textbf{pdf:} 2"
       ],
       "text/markdown": [
-       "**png:** 2"
+       "**pdf:** 2"
       ],
       "text/plain": [
-       "png \n",
+       "pdf \n",
        "  2 "
       ]
      },
@@ -302,7 +326,7 @@
    ],
    "source": [
     "# Modify this!!!\n",
-    "pdf(\"chord_diagram.pdf\") \n",
+    "pdf(output_pdf_path) \n",
     "\n",
     "# set up the parameters\n",
     "circos.clear()\n",
@@ -312,20 +336,48 @@
     "           canvas.ylim = c(-1.3,1.3))\n",
     "par(mar = c(0,0,2,0),xpd = TRUE, cex.main = 1.5)\n",
     "\n",
+    "# print(adjacencyData)\n",
+    "\n",
     "# create the chord diagram\n",
-    "chordDiagram(links,\n",
-    "              grid.col = color_ind,\n",
+    "# Error in rep(small.gap, n_df1 - 1): invalid 'times' argument due to 0's being present in the links dataframe\n",
+    "# chordDiagram(links,\n",
+    "#              grid.col = color_ind,\n",
+    "#              transparency = 0.25,\n",
+    "#              diffHeight  = -0.04,\n",
+    "#              annotationTrack = \"grid\", \n",
+    "#              annotationTrackHeight = c(0.05, 0.1),\n",
+    "#              link.sort = TRUE, \n",
+    "#              link.largest.ontop = FALSE,\n",
+    "#              self.link = 1, \n",
+    "#              small.gap = 1,\n",
+    "#              big.gap = 1\n",
+    "# )\n",
+    "\n",
+    "# chordDiagram(edge_l,\n",
+    "#              grid.col = color_ind,\n",
+    "#              transparency = 0.25,\n",
+    "#              diffHeight  = -0.04,\n",
+    "#              annotationTrack = \"grid\", \n",
+    "#              annotationTrackHeight = c(0.05, 0.1),\n",
+    "#              link.sort = TRUE, \n",
+    "#              link.largest.ontop = FALSE,\n",
+    "#              self.link = 1, \n",
+    "#              small.gap = 1,\n",
+    "#              big.gap = 1\n",
+    "# )\n",
+    "\n",
+    "chordDiagram(adjacencyData,\n",
+    "             grid.col = color_ind,\n",
     "             transparency = 0.25,\n",
     "             diffHeight  = -0.04,\n",
     "             annotationTrack = \"grid\", \n",
     "             annotationTrackHeight = c(0.05, 0.1),\n",
     "             link.sort = TRUE, \n",
     "             link.largest.ontop = FALSE,\n",
-    "              self.link = 1, \n",
-    "              small.gap = 1,\n",
-    "              big.gap = 1\n",
+    "             self.link = 1, \n",
+    "             small.gap = 1,\n",
+    "             big.gap = 1\n",
     ")\n",
-    "                    \n",
     "\n",
     "# Add the text and the axis surrounding the diagram.\n",
     "circos.trackPlotRegion(\n",
@@ -355,15 +407,12 @@
     "      minor.ticks = 2, \n",
     "      major.tick.length = 0.1, \n",
     "      labels.niceFacing = FALSE)\n",
-    "      \n",
+    "\n",
     "  }\n",
     ")\n",
     "\n",
-    "\n",
-    "\n",
     "# Add the title (user can modify the title in step 3) \n",
     "title(title,outer=FALSE)\n",
-    "                    \n",
     "                    \n",
     "dev.off()\n",
     "                    "
@@ -382,7 +431,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.0.5"
+   "version": "4.2.2"
   }
  },
  "nbformat": 4,
