some notes for downloading and bug fix in groupedcollabs

--- a/ScholarCollabs.ipynb
+++ b/ScholarCollabs.ipynb
@@ -26,6 +26,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6763c73d",
+   "metadata": {},
+   "source": [
+    "R notebook Installation Steps:\n",
+    "1. Download R locally using a CRAN mirror\n",
+    "2. Create a new environment `conda create -n sms`\n",
+    "3. Download the R package that creates an R kernel to be used in jupyter notebooks. There are two ways:\n",
+    "   - `conda install -c r r-irkernel` in Anaconda Prompt/terminal, or\n",
+    "   - Open an R terminal by typing `R` and hitting enter. The terminal should start with >, indicating that it is working in R. Follow this with `install.packages('IRkernel')`\n",
+    "\n",
+    "\n",
+    "R should now be available in the drop-down kernel selection menu. Select it to run code blocks in R."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fce6ee32-a70e-404c-8637-5a549b4d3008",
    "metadata": {},
    "source": [
