changing format to allow for scival api calls

--- a/GroupedCollabs.ipynb
+++ b/GroupedCollabs.ipynb
@@ -37,14 +37,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "id": "0b8f7647-2f14-4e3e-99b0-df093190f2ee",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in library(tidyverse): there is no package called 'tidyverse'\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in library(tidyverse): there is no package called 'tidyverse'\nTraceback:\n",
+      "1. library(tidyverse)"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(viridis)\n",
@@ -16639,7 +16649,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
