--- a/ScholarCollabs.ipynb
+++ b/ScholarCollabs.ipynb
@@ -33,8 +33,9 @@
     "1. Download R locally using a CRAN mirror\n",
     "2. Create a new environment `conda create -n sms`\n",
     "3. Download the R package that creates an R kernel to be used in jupyter notebooks. There are two ways:\n",
-    "   - `conda install -c r r-irkernel` in Anaconda Prompt/terminal, or\n",
-    "   - Open an R terminal by typing `R` and hitting enter. The terminal should start with >, indicating that it is working in R. Follow this with `install.packages('IRkernel')`\n",
+    "   1. `conda install -c conda-forge r-base` to install R in Anaconda Prompt/terminal,\n",
+    "      - `conda install -c r r-irkernel` to activate R jupyter notebooks or\n",
+    "      - Open an R terminal by typing `R` and hitting enter. The terminal should start with >, indicating that it is working in R. Follow this with `install.packages('IRkernel')`\n",
     "\n",
     "\n",
     "R should now be available in the drop-down kernel selection menu. Select it to run code blocks in R."
@@ -54,11 +55,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "0b8f7647-2f14-4e3e-99b0-df093190f2ee",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "library(tidyverse)\n",
@@ -83,11 +80,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "48dd282f-c187-4c92-855d-a42f2c607d86",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# !!! Modify this to match the name of the CSV file that was created as output form the ScholarScraper notebook\n",
@@ -135,11 +128,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "cbf220ec-01c2-4bac-aeec-64b01ef9ce4a",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# !!! Modify the diagram title\n",
@@ -163,11 +152,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "4490937c-f743-4584-b016-785bac8c3777",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_collab = read.csv(ss_output_file)"
@@ -185,11 +170,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "1db6abb7-5a2e-4ff3-8683-d2a32a80d15b",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# creating a subset of our survey data that extracts the useful columns. \n",
@@ -211,11 +192,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "9bf222d0-9e43-4a65-b8be-75c472437150",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "origin = c()\n",
@@ -266,11 +243,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "9f1bc4f3-c252-43b6-baa9-3c1a896266d6",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "color =  c()\n",
@@ -294,11 +267,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "71388505",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -314,11 +283,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "131f81a0-8fd0-46d9-a856-245d27ae912b",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -437,17 +402,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R",
-   "language": "R",
-   "name": "ir"
+   "display_name": "sms",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": "r",
    "file_extension": ".r",
    "mimetype": "text/x-r-source",
-   "name": "R",
+   "name": "python",
    "pygments_lexer": "r",
-   "version": "4.2.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
