adding existing dmcbh comparisons

--- a/ScholarCollabs.ipynb
+++ b/ScholarCollabs.ipynb
@@ -53,10 +53,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "0b8f7647-2f14-4e3e-99b0-df093190f2ee",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.4.2     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.2     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.2     \n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
+      "Loading required package: viridisLite\n",
+      "\n",
+      "========================================\n",
+      "circlize version 0.4.16\n",
+      "CRAN page: https://cran.r-project.org/package=circlize\n",
+      "Github page: https://github.com/jokergoo/circlize\n",
+      "Documentation: https://jokergoo.github.io/circlize_book/book/\n",
+      "\n",
+      "If you use it in published research, please cite:\n",
+      "Gu, Z. circlize implements and enhances circular visualization\n",
+      "  in R. Bioinformatics 2014.\n",
+      "\n",
+      "This message can be suppressed by:\n",
+      "  suppressPackageStartupMessages(library(circlize))\n",
+      "========================================\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(viridis)\n",
@@ -78,12 +116,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "48dd282f-c187-4c92-855d-a42f2c607d86",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# !!! Modify this to match the name of the CSV file that was created as output form the ScholarScraper notebook\n",
+    "\n",
+    "ss_output_file = \"gs_outputs/ss_gs_authorlist.csv\"\n",
+    "title = \"Google Scholar Collaborations\"\n",
+    "output_pdf_path = \"ss_gs.pdf\"\n",
+    "# ss_output_file = \"scival_authorlist_citations.csv\"\n",
+    "# title = \"authorlist test\"\n",
+    "# output_pdf_path = \"authorlist_test.pdf\"\n",
     "\n",
     "# ss_output_file = \"simplified-dmcbh_members_output_data.csv\"\n",
     "# title = \"DMCBH IRP Collaborations\"\n",
@@ -109,9 +158,9 @@
     "# output_pdf_path = \"irp_bir_chord_diagram-weighted.pdf\"\n",
     "# output_pdf_path = \"irp_bir_chord_diagram-unweighted.pdf\"\n",
     "\n",
-    "ss_output_file = \"simplified-new-irp_smsmd_members_output_data.csv\"\n",
-    "title = \"Sensory Motor Systems\\n& Movement Disorders IRP Collaborations\"\n",
-    "output_pdf_path = \"irp_smsmd_chord_diagram-unweighted.pdf\""
+    "# ss_output_file = \"simplified-new-irp_smsmd_members_output_data.csv\"\n",
+    "# title = \"Sensory Motor Systems\\n& Movement Disorders IRP Collaborations\"\n",
+    "# output_pdf_path = \"irp_smsmd_chord_diagram-unweighted.pdf\""
    ]
   },
   {
@@ -126,9 +175,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "cbf220ec-01c2-4bac-aeec-64b01ef9ce4a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# !!! Modify the diagram title\n",
@@ -150,9 +203,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "4490937c-f743-4584-b016-785bac8c3777",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "df_collab = read.csv(ss_output_file)"
@@ -168,9 +225,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "1db6abb7-5a2e-4ff3-8683-d2a32a80d15b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# creating a subset of our survey data that extracts the useful columns. \n",
@@ -190,9 +251,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "9bf222d0-9e43-4a65-b8be-75c472437150",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "origin = c()\n",
@@ -241,9 +306,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "9f1bc4f3-c252-43b6-baa9-3c1a896266d6",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "color =  c()\n",
@@ -267,7 +336,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "71388505",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -281,9 +354,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "131f81a0-8fd0-46d9-a856-245d27ae912b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -334,20 +411,7 @@
     "#              big.gap = 1\n",
     "# )\n",
     "\n",
-    "# chordDiagram(edge_l,\n",
-    "#              grid.col = color_ind,\n",
-    "#              transparency = 0.25,\n",
-    "#              diffHeight  = -0.04,\n",
-    "#              annotationTrack = \"grid\", \n",
-    "#              annotationTrackHeight = c(0.05, 0.1),\n",
-    "#              link.sort = TRUE, \n",
-    "#              link.largest.ontop = FALSE,\n",
-    "#              self.link = 1, \n",
-    "#              small.gap = 1,\n",
-    "#              big.gap = 1\n",
-    "# )\n",
-    "\n",
-    "chordDiagram(adjacencyData,\n",
+    "chordDiagram(edge_l,\n",
     "             grid.col = color_ind,\n",
     "             transparency = 0.25,\n",
     "             diffHeight  = -0.04,\n",
@@ -359,6 +423,19 @@
     "             small.gap = 1,\n",
     "             big.gap = 1\n",
     ")\n",
+    "\n",
+    "# chordDiagram(adjacencyData,\n",
+    "#              grid.col = color_ind,\n",
+    "#              transparency = 0.25,\n",
+    "#              diffHeight  = -0.04,\n",
+    "#              annotationTrack = \"grid\", \n",
+    "#              annotationTrackHeight = c(0.05, 0.1),\n",
+    "#              link.sort = TRUE, \n",
+    "#              link.largest.ontop = FALSE,\n",
+    "#              self.link = 1, \n",
+    "#              small.gap = 1,\n",
+    "#              big.gap = 1\n",
+    "# )\n",
     "\n",
     "# Add the text and the axis surrounding the diagram.\n",
     "circos.trackPlotRegion(\n",
@@ -402,17 +479,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sms",
-   "language": "python",
-   "name": "python3"
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": "r",
    "file_extension": ".r",
    "mimetype": "text/x-r-source",
-   "name": "python",
+   "name": "R",
    "pygments_lexer": "r",
-   "version": "3.10.12"
+   "version": "4.2.2"
   }
  },
  "nbformat": 4,
