--- a/GroupedCollabs.ipynb
+++ b/GroupedCollabs.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "0b8f7647-2f14-4e3e-99b0-df093190f2ee",
    "metadata": {
     "vscode": {
@@ -46,12 +46,36 @@
    },
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "Error in library(tidyverse): there is no package called 'tidyverse'\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in library(tidyverse): there is no package called 'tidyverse'\nTraceback:\n",
-      "1. library(tidyverse)"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.4.2     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.2     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.2     \n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
+      "Loading required package: viridisLite\n",
+      "\n",
+      "========================================\n",
+      "circlize version 0.4.16\n",
+      "CRAN page: https://cran.r-project.org/package=circlize\n",
+      "Github page: https://github.com/jokergoo/circlize\n",
+      "Documentation: https://jokergoo.github.io/circlize_book/book/\n",
+      "\n",
+      "If you use it in published research, please cite:\n",
+      "Gu, Z. circlize implements and enhances circular visualization\n",
+      "  in R. Bioinformatics 2014.\n",
+      "\n",
+      "This message can be suppressed by:\n",
+      "  suppressPackageStartupMessages(library(circlize))\n",
+      "========================================\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -77,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 3,
    "id": "514ef364-911c-4691-be89-86ea515fe665",
    "metadata": {
     "vscode": {
@@ -91,7 +115,7 @@
     "# # !!! Modify this to match the name of your groupings CSV file. See instructions above. \n",
     "# group_file = \"dbc_faculty_groups.csv\"\n",
     "\n",
-    "ss_output_file = \"simplified-all_dmcbh_members_output_data.csv\"\n",
+    "ss_output_file = \"scival_authorlist_citations.csv\"\n",
     "group_file = \"foo.csv\""
    ]
   },
@@ -107,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 4,
    "id": "4ce25601-644b-4bcf-a0f1-fd2cc7379719",
    "metadata": {
     "vscode": {
@@ -117,7 +141,7 @@
    "outputs": [],
    "source": [
     "# !!! Modify the diagram title\n",
-    "title = \"DMCBH IRP Collaborations Grouped By IRP\"\n",
+    "title = \"CBH Collaborations\"\n",
     "\n",
     "# !!! Modify the colour palette. Make sure there are the same number of colours as groups. \n",
     "c_pallete = c(\"red\",\"green\",\"blue\",\"cyan\",\"magenta\")\n",
@@ -16649,7 +16673,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.1"
+   "version": "4.2.2"
   }
  },
  "nbformat": 4,
