dmcbh coauthors scraped

--- a/author_lookup.ipynb
+++ b/author_lookup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH_TO_INPUT_CSV = \"authorlist_names_only.csv\"\n",
-    "OUTPUT_FILEPATH = \"ss_scival_authorlist.csv\"\n",
+    "PATH_TO_INPUT_CSV = \"gs_outputs/DMCBH/all_dmcbh_members-simplified.csv\"\n",
+    "OUTPUT_FILEPATH = \"ss_scival_dmcbh.csv\"\n",
     "\n",
     "# https://dev.elsevier.com/sc_author_search_tips.html for list of subjects\n",
     "subjects_list = [\"NEUR\", \"BIOC\", \"MEDI\", \"PSYC\", \"HEAL\", \"IMMU\", \"NURS\", \"PHAR\"]\n",
