--- a/ScholarCollabs.ipynb
+++ b/ScholarCollabs.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "48dd282f-c187-4c92-855d-a42f2c607d86",
    "metadata": {
     "vscode": {
@@ -127,12 +127,12 @@
    "source": [
     "# !!! Modify this to match the name of the CSV file that was created as output form the ScholarScraper notebook\n",
     "\n",
-    "ss_output_file = \"gs_outputs/ss_gs_authorlist.csv\"\n",
-    "title = \"Google Scholar Collaborations\"\n",
-    "output_pdf_path = \"ss_gs.pdf\"\n",
-    "# ss_output_file = \"scival_authorlist_citations.csv\"\n",
-    "# title = \"authorlist test\"\n",
-    "# output_pdf_path = \"authorlist_test.pdf\"\n",
+    "ss_output_file = \"authorlist comparisons/scival_outputs/scival_authorlist_publications.csv\"\n",
+    "title = \"Scival authorlist Coauthored Publications\"\n",
+    "output_pdf_path = \"authorlist_scival.pdf\"\n",
+    "# ss_output_file = \"scival_dmcbh_citations.csv\"\n",
+    "# title = \"DMCBH Scival Coauthored Publications\"\n",
+    "# output_pdf_path = \"dmcbh_scival.pdf\"\n",
     "\n",
     "# ss_output_file = \"simplified-dmcbh_members_output_data.csv\"\n",
     "# title = \"DMCBH IRP Collaborations\"\n",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "cbf220ec-01c2-4bac-aeec-64b01ef9ce4a",
    "metadata": {
     "vscode": {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "4490937c-f743-4584-b016-785bac8c3777",
    "metadata": {
     "vscode": {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "1db6abb7-5a2e-4ff3-8683-d2a32a80d15b",
    "metadata": {
     "vscode": {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "id": "9bf222d0-9e43-4a65-b8be-75c472437150",
    "metadata": {
     "vscode": {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "9f1bc4f3-c252-43b6-baa9-3c1a896266d6",
    "metadata": {
     "vscode": {
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "id": "131f81a0-8fd0-46d9-a856-245d27ae912b",
    "metadata": {
     "vscode": {
@@ -411,20 +411,7 @@
     "#              big.gap = 1\n",
     "# )\n",
     "\n",
-    "chordDiagram(edge_l,\n",
-    "             grid.col = color_ind,\n",
-    "             transparency = 0.25,\n",
-    "             diffHeight  = -0.04,\n",
-    "             annotationTrack = \"grid\", \n",
-    "             annotationTrackHeight = c(0.05, 0.1),\n",
-    "             link.sort = TRUE, \n",
-    "             link.largest.ontop = FALSE,\n",
-    "             self.link = 1, \n",
-    "             small.gap = 1,\n",
-    "             big.gap = 1\n",
-    ")\n",
-    "\n",
-    "# chordDiagram(adjacencyData,\n",
+    "# chordDiagram(edge_l,\n",
     "#              grid.col = color_ind,\n",
     "#              transparency = 0.25,\n",
     "#              diffHeight  = -0.04,\n",
@@ -436,6 +423,19 @@
     "#              small.gap = 1,\n",
     "#              big.gap = 1\n",
     "# )\n",
+    "\n",
+    "chordDiagram(adjacencyData,\n",
+    "             grid.col = color_ind,\n",
+    "             transparency = 0.25,\n",
+    "             diffHeight  = -0.04,\n",
+    "             annotationTrack = \"grid\", \n",
+    "             annotationTrackHeight = c(0.05, 0.1),\n",
+    "             link.sort = TRUE, \n",
+    "             link.largest.ontop = FALSE,\n",
+    "             self.link = 1, \n",
+    "             small.gap = 1,\n",
+    "             big.gap = 1\n",
+    ")\n",
     "\n",
     "# Add the text and the axis surrounding the diagram.\n",
     "circos.trackPlotRegion(\n",
