created author matrices

--- a/ScholarCollabs.ipynb
+++ b/ScholarCollabs.ipynb
@@ -98,9 +98,9 @@
    "source": [
     "library(tidyverse)\n",
     "library(viridis)\n",
-    "# devtools::install_github(\"thomasp85/patchwork\")\n",
-    "# devtools::install_github(\"jokergoo/circlize\")\n",
-    "# install.packages(\"RColorBrewer\")\n",
+    "devtools::install_github(\"thomasp85/patchwork\")\n",
+    "devtools::install_github(\"jokergoo/circlize\")\n",
+    "install.packages(\"RColorBrewer\")\n",
     "library(patchwork)\n",
     "library(circlize)\n",
     "library(RColorBrewer)"
