--- a/ScholarCollabs.ipynb
+++ b/ScholarCollabs.ipynb
@@ -62,36 +62,12 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.4.2     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.2     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.2     \n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
-      "Loading required package: viridisLite\n",
-      "\n",
-      "========================================\n",
-      "circlize version 0.4.16\n",
-      "CRAN page: https://cran.r-project.org/package=circlize\n",
-      "Github page: https://github.com/jokergoo/circlize\n",
-      "Documentation: https://jokergoo.github.io/circlize_book/book/\n",
-      "\n",
-      "If you use it in published research, please cite:\n",
-      "Gu, Z. circlize implements and enhances circular visualization\n",
-      "  in R. Bioinformatics 2014.\n",
-      "\n",
-      "This message can be suppressed by:\n",
-      "  suppressPackageStartupMessages(library(circlize))\n",
-      "========================================\n",
-      "\n",
-      "\n"
+     "ename": "ERROR",
+     "evalue": "Error in library(tidyverse): there is no package called 'tidyverse'\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in library(tidyverse): there is no package called 'tidyverse'\nTraceback:\n",
+      "1. library(tidyverse)"
      ]
     }
    ],
@@ -489,7 +465,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
